--- a/removeImageBg/removeImageBg/Storyboard/Base.lproj/Main.storyboard
+++ b/removeImageBg/removeImageBg/Storyboard/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jieun" translatesAutoresizingMaskIntoConstraints="NO" id="eun-RQ-sB3">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="144599_109975_2356" translatesAutoresizingMaskIntoConstraints="NO" id="eun-RQ-sB3">
                                 <rect key="frame" x="80" y="315" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -34,7 +34,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="jieun" width="2315" height="2315"/>
+        <image name="144599_109975_2356" width="984" height="372"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
