--- a/UXThinkBig_TextField/UXThinkBig_TextField/Global/View/ReusableTextFieldView.xib
+++ b/UXThinkBig_TextField/UXThinkBig_TextField/Global/View/ReusableTextFieldView.xib
@@ -8,9 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ReusableTextFieldView" customModule="UXThinkBig_TextField" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="ReusableTextFieldView" id="iN0-l3-epB" customClass="ReusableTextFieldView" customModule="UXThinkBig_TextField" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="300" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
